# llm-ai-service

./: CONTRIBUTING.md  Dockerfile.qdrant  README.md  celerybeat-schedule.bak  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 122116e6ffd5_initial_migration.py  1aebf9488fcc_initial_migration.py  1be24d15276d_initial_migration.py  1dcff2c77974_initial_migration.py  2f93495b8f32_initial_migration.py  3d081170d772_initial_migration.py  494f47b46e3e_initial_migration.py  4dc35974eb6b_initial_migration.py  5147b3268969_initial_migration.py  533f802658e7_initial_migration.py  5d918d39afde_initial_migration.py  6e7ac8989fef_initial_migration.py  70dc408fb8cd_initial_migration.py  7262500816eb_initial_migration.py  765c0b41b273_initial_migration.py  8d0662e4f66a_initial_migration.py  9ba1d0bb63ea_initial_migration.py  9ec969dd43b7_initial_migration.py  a2bda8acc16a_initial_migration.py  ab435eebd79c_initial_migration.py  b0f3f32d3385_initial_migration.py  b4c2b153d1e3_initial_migration.py  b612b643400a_initial_migration.py  ccadf34e6630_initial_migration.py  dc53b6de6326_initial_migration.py  f9e546d3f4ed_initial_migration.py
init/: pg_hba.conf
scripts/: generate_secrets.py
src/: main.py
src/config/: logging.py  settings.py
src/core/: async_db.py  database.py  depends.py  errors.py  exception_handlers.py  exceptions.py  security.py  sync_db.py
src/crud/: chat.py  document.py  document_job.py  factory.py  user.py  vector_chunk.py
src/middleware/: request_id.py
src/models/: __init__.py  base.py  chat.py  document.py  document_job.py  (+2 more)
(+41 files in other folders)
